# OpenCode-Cpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/auth/: codex_auth.cpp  codex_auth.h
src/config/: config.cpp  config.h
src/llm/: agent_loop.cpp  agent_loop.h  anthropic.cpp  anthropic.h  openai.cpp  openai.h  provider.h  streaming.cpp  streaming.h
src/session/: database.cpp  database.h  session.cpp  session.h
src/skills/: skill.cpp  skill.h  skill_tool.cpp  skill_tool.h
src/tools/: bash.cpp  bash.h  file_edit.cpp  file_edit.h  file_read.cpp  file_read.h  file_write.cpp  file_write.h  glob.cpp  glob.h  grep.cpp  grep.h  ls.cpp  ls.h  subagent.cpp  subagent.h  tool.h  web_fetch.cpp  web_fetch.h  web_search.cpp  web_search.h
src/tui/: input.cpp  input.h  markdown.cpp  markdown.h  render.cpp  render.h  tui.cpp  tui.h
src/utils/: color.h  http.cpp  http.h  json.h
tests/: test_ac16_codex_auth_cli.cpp  test_codex_auth_flow.cpp  test_codex_responses_api.cpp  test_compact_status.cpp  test_config.cpp  test_llm.cpp  test_markdown.cpp  test_openai_streaming.cpp  test_plan_mode.cpp  test_scroll_container.cpp  test_session.cpp  test_session_resume.cpp  test_skills.cpp  test_sprint_f1_config.cpp  test_sprint_f2_session.cpp  test_sprint_f3_compaction.cpp  test_sprint_f4_suggestions.cpp  test_sprint_f5_parallel.cpp  test_sprint_f6_features.cpp  test_steer_fix.cpp  test_tools.cpp  test_tui_scroll.cpp
